# MedMind

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_phase1.py
cc_docs/: enhancement-strategy.md  pydantic-ai-architecture.md  setup-summary.md
cc_docs/memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
examples/: batch_test.py  main.py  setup_rag.py  simple_rag.py  simple_streamlit.py
physiology_rag/: __init__.py
physiology_rag/agents/: __init__.py  cli.py  coordinator.py
physiology_rag/config/: settings.py
physiology_rag/core/: advanced_chunking.py  answer_attribution.py  async_embeddings.py  cache_manager.py  document_processor.py  embeddings_service.py  paragraph_extractor.py  rag_system.py
physiology_rag/dependencies/: __init__.py  medical_context.py
physiology_rag/pdf_processing/: __init__.py
physiology_rag/ui/: __init__.py  streamlit_app.py
physiology_rag/utils/: logging.py
scripts/: setup.py
tests/: __init__.py  conftest.py  test_auth.py  test_document_processor.py  test_gemini_embeddings.py
tests/test_agents/: __init__.py  test_coordinator.py
